<resources>
    <string name="app_name" translatable="false">eCity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa_ecity">Mapa</string>
    <string name="title_activity_login_ecity" translatable="false">Login</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password2">Confirme a Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="esqueci_senha">Esqueci a senha</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">Criar Conta</string>
    <string name="title_activity_nova_conta">Nova Conta</string>
    <string name="auth_failed">Usuário/Senha incorreto</string>
    <string name="registrar">REGISTRAR</string>
    <string name="atualizar">Atualizar</string>
    <string name="title_activity_maps">Map</string>
    <string name="assunto">Assunto</string>
    <string name="mensagem">Mensagem</string>
    <string-array name="dia_nasc">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mes_nasc">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="ano_nasc">
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_extra">Criar Conta</string>
    <string name="entrar_google">Entrar com o Google</string>
    <string name="bem_vindo">Bem vindo ao</string>
    <string name="ecity_string">eCity</string>
    <string name="server_web_ecity">939200589420-dknc39gg9aphs2nmevo24skehb3p3865.apps.googleusercontent.com</string>
    <string name="label_eletricidade">Eletricidade</string>
    <string name="label_agua">Água</string>
    <string name="label_lixo">Lixo</string>
    <string name="label_mobilidade">Mobilidade</string>
    <string name="label_infra_geral">Infra. Geral</string>
    <string name="label_saude">Saúde</string>
    <string name="label_educacao">Educação</string>
    <string name="label_seguranca">Segurança</string>
    <string name="label_lazer">Lazer</string>
    <string name="label_ambiente">Meio Ambiente</string>
    <string name="label_nada">Carregue o mapa</string>
    <string name="text_atualizar_perfil">Atualizar Perfil</string>
    <string name="input_nome">Nome</string>
    <string name="input_tele">Telefone</string>
    <string name="text_sexo">Sexo</string>
    <string name="text_masc">Masculino</string>
    <string name="text_fem">Feminino</string>
    <string name="tex_sem_email">seu email</string>
    <string name="text_problema">Problema</string>
    <string name="txt_descri_n_disp">Descrição não disponível</string>
    <string name="txt_lat_n_disp">Latitude não disponível</string>
    <string name="txt_long_n_disp">Longitude não disponível</string>
    <string name="btn_denunciar">Denunciar</string>
    <string name="btn_resolvido">Resolvido</string>
    <string name="menu_problemas">Problemas</string>
    <string name="menu_resolvido">Resolvidos</string>
    <string name="menu_atualizar_perfil">Atualizar Perfil</string>
    <string name="menu_fale_conosco">Fale Conosco</string>
    <string name="menu_sair">Sair</string>
    <string name="ele_fab1">Poste Quebrado</string>
    <string name="ele_fab2">Falta/Queda constante de energia</string>
    <string name="ele_fab3">Ausência de iluminação pública</string>
    <string name="ele_fab4">Fios de energias soltos</string>
    <string name="ele_fab5"></string>
    <string name="ele_fab6">Outros (Elétrico)</string>
    <string name="ele_fab7"></string>
    <string name="agufab1">Água suja na torneira</string>
    <string name="agufab2">Falta constante de água</string>
    <string name="agufab3">Esgoto a céu aberto</string>
    <string name="agufab4">Área inundada</string>
    <string name="agufab5">Vazamento de água</string>
    <string name="agufab6">Outros (Água)</string>
    <string name="agufab7"></string>
    <string name="lix_fab1">Lixeira quebrada</string>
    <string name="lix_fab2">Lixo em áreas ambientais</string>
    <string name="lix_fab3">Local público sem higiene</string>
    <string name="lix_fab4">Lixo em terreno baldio</string>
    <string name="lix_fab5"></string>
    <string name="lix_fab6">Outros (Lixo)</string>
    <string name="lix_fab7"></string>
    <string name="mob_fab1">Semáforo quebrado</string>
    <string name="mob_fab2">Faixa de pedestre apagada</string>
    <string name="mob_fab3">Buraco na pista</string>
    <string name="mob_fab4">Bueiro aberto</string>
    <string name="mob_fab5">Placa quebrada/faltando</string>
    <string name="mob_fab6">Parada de ônibus quebrada</string>
    <string name="mob_fab7">Outros (Mobilidade)</string>
    <string name="ger_fab1">Patrimônio degradado</string>
    <string name="ger_fab2">Calçada sem acessibilidade</string>
    <string name="ger_fab3"></string>
    <string name="ger_fab4"></string>
    <string name="ger_fab5"></string>
    <string name="ger_fab6">Outros (Infra. Geral)</string>
    <string name="ger_fab7"></string>
    <string name="sau_fab1">Unidade sem acessibilidade"</string>
    <string name="sau_fab2">Unidade sem médicos</string>
    <string name="sau_fab3">Unidade sem medicamentos</string>
    <string name="sau_fab4">Unidade lotada</string>
    <string name="sau_fab5"></string>
    <string name="sau_fab6">Outros (Saúde)</string>
    <string name="sau_fab7"></string>
    <string name="edu_fab1">Escola sem acessibilidade</string>
    <string name="edu_fab2">Escola sem merenda</string>
    <string name="edu_fab3">Escola sem aula hoje</string>
    <string name="edu_fab4">Escola sem professor</string>
    <string name="edu_fab5"></string>
    <string name="edu_fab6">Outros (Educação)</string>
    <string name="edu_fab7"></string>
    <string name="seg_fab1">Fui assaltado aqui</string>
    <string name="seg_fab2">Ausência de ronda na região</string>
    <string name="seg_fab3">Rua perigosa</string>
    <string name="seg_fab4"></string>
    <string name="seg_fab5"></string>
    <string name="seg_fab6">Outros (Segurança)</string>
    <string name="seg_fab7"></string>
    <string name="laz_fab1">Praia suja</string>
    <string name="laz_fab2">Praça degradada</string>
    <string name="laz_fab3">Ausência de praça na região</string>
    <string name="laz_fab4"></string>
    <string name="laz_fab5"></string>
    <string name="laz_fab6">Outros (Lazer)</string>
    <string name="laz_fab7"></string>
    <string name="amb_fab1">Queimadas</string>
    <string name="amb_fab2">Desmatamento ou poda ilegal</string>
    <string name="amb_fab3">Invasão de áreas protegidas</string>
    <string name="amb_fab4">Captura/Comércio ilegal de animais</string>
    <string name="amb_fab5">Praga urbana</string>
    <string name="amb_fab6">Outros (Meio Ambiente)</string>
    <string name="amb_fab7"></string>
    <string name="posso_ajudar">Posso ajudá-lo?</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="descri_problema">Descrição do problema: </string>
    <string name="enviar_foto">Enviar foto?</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="gps">GPS</string>
    <string name="gps_n_habilitado">GPS não está habilitado. Você deseja configura-lo?</string>
    <string name="salvando_foto">Salvando foto...</string>
    <string name="foto_salva">Foto salva."</string>
    <string name="hint_problem_solved">Por favor, descreva como o problema foi solucionado.</string>
    <string name="title_problem_solved">Deseja marcar o problema como resolvido?</string>
    <string name="msg_problem_solved">O marcador será enviado para o Mapa de Resolvidos</string>
    <string name="title_maker_delete">Deseja excluir o marcador?</string>
    <string name="msg_marker_delete">O marcador será deletado para sempre e não será registrado como resolvido</string>
    <string name="marker_deleted">Marcador deletado</string>
    <string name="title_marker_denucia">Este problema é falso?</string>
    <string name="reg_solveds">Registrando em Resolvidos...</string>
    <string name="registrado_solved">Registrado em Resolvidos.</string>
    <string name="no_image">Sem imagem</string>
    <string name="como_resolvido">Registrado como Resolvido.</string>
    <string name="solucao">Solução: </string>
    <string name="perfil_atualizado">Perfil Atualizado</string>
    <string name="falha_atualizar">Falha ao atualizar perfil</string>
    <string name="welcome">Bem vindo</string>
    <string name="loc_n_encontrada">Localização não encontrada</string>
    <string name="msg_loc_n_encontrada">Sua Localização não foi encontrada!! Tente novamente!</string>
</resources>