<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapaPrincial"
            android:icon="@drawable/ic_location_on_red_24dp"
            android:title="@string/menu_problemas"
            android:iconTint="@color/VermelhoIcon"
            />
        <item
            android:id="@+id/mapaSoluções"
            android:icon="@drawable/ic_location_on_green_24dp"
            android:title="@string/menu_resolvido" />

    </group>

    <item android:title="Conta">
        <menu>
            <item
                android:id="@+id/atualizarPerfil"
                android:icon="@drawable/ic_update_black_24dp"
                android:title="@string/menu_atualizar_perfil" />

            <item
                android:id="@+id/FaleConosco"
                android:icon="@drawable/ic_mail_outline_black_24dp"
                android:title="@string/menu_fale_conosco" />
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
