<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/linearDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="80dp"

        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:background="@color/branco"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/deletar"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete_black_24dp"
                android:padding="4dp"
                android:background="@drawable/btn_corner"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/buttonMarker"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:drawableStart="@drawable/ic_close_black_24dp"
                android:padding="4dp"
                android:background="@drawable/btn_corner"
                />

            <TextView
                android:id="@+id/tituloMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:padding="8dp"
                android:text="@string/text_problema"
                android:textAlignment="center"
                android:textColor="#600210"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView

            android:id="@+id/fotoMarker"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/background0" />

        <TextView
            android:id="@+id/descriMaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/txt_descri_n_disp" />

        <TextView
            android:id="@+id/latTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/txt_lat_n_disp" />

        <TextView
            android:id="@+id/longTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/txt_long_n_disp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDenucia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_denunciar"
                android:text="@string/btn_denunciar"
                android:textColor="#FFFFFF" />


            <Button
                android:id="@+id/btnResolvido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/btn_resolvido"
                android:text="@string/btn_resolvido"
                android:textColor="#FFFFFF"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>