<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ecity.alice.project.ecity.AtualizarPerfil">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/background0"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/texAtualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_atualizar_perfil"
        android:textColor="#E1F5FE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texAtualizar">

        <ProgressBar
            android:id="@+id/login_progress3"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/input_nome2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_nome"
                        android:inputType="textPersonName"
                        android:textColor="#E1F5FE"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/input_tele2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_tele"
                        android:inputType="phone"
                        android:textColor="#E1F5FE"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textNasci2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data de Nasc.:"
                    android:textSize="16sp"
                    android:textColor="#E1F5FE"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinnerDia2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:textSize="16sp"
                        android:textColor="#E1F5FE"
                        />

                    <Spinner
                        android:id="@+id/spinnerMes2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:textSize="16sp"
                        android:textColor="#E1F5FE"
                        />

                    <Spinner
                        android:id="@+id/spinnerAno2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#E1F5FE"

                        />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sexo"
                    android:textColor="#E1F5FE"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/radioMasc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:text="@string/text_masc"
                        android:textColor="#E1F5FE"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioFemi2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_fem"
                        android:textColor="#E1F5FE"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                        android:id="@+id/email2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="seu email"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:visibility="invisible"
                    android:textColor="#E1F5FE"
                    />


                <Button
                    android:id="@+id/btn_email_sign_in2"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/darkLightBlue"
                    android:text="@string/atualizar"
                    android:textColor="@color/branco"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
